Fixed alignment behaviour on project filtering with 2 results

--- a/css/new_main.css
+++ b/css/new_main.css
@@ -488,17 +488,16 @@ img.education {
 }
 
 .project-grid-wrapper {
-	display: flex;
-	justify-content: center;
+	padding: 0rem;
 }
 
 .project-grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(300px, max-content));
 	gap: 10px;
-	width: 100%;
-	max-width: calc(3 * 950px + 2 * 10px); /* max 3 columns + 2 gaps */
-	align-content: start;
+	max-width: calc(3 * 350px + 2 * 10px); /* max 3 columns + 2 gaps */
+	margin: 0 auto;
+	justify-items: start;
 }
 
 .project-card {
@@ -510,18 +509,21 @@ img.education {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	transition: transform 0.2s ease;
 	justify-content: flex-start;
-	max-width: 950px;
+	max-width: 350px;
 	width: 100%;
 	margin: 0; /* center each card if fewer items */
 }
 
 .project-card img {
 	margin-top: 10px;
+	margin-left: -5px;
+	margin-right: -5px;
 	border-radius: 10px;
 	height: 200px;
-	width: 300px;
+	width: 280px;
 }
 
 .project-card .card-text {
